---------------------------------------------------------------------------------------------------
Version: 0.1.6
Date: 29. 8. 2018
  Fixes:
    - Fixed logistics science required Universal transport engines instead of Flying cargo kit
    - Fixed when bob inserter overhaul was present it wouldn't remove the fast inserter from the ATMOS set recipe
    - Fixed when bob inserter overhaul was present it wouldn't update the filter inserter from the Automated storage recipe
---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 25. 8. 2018
  Fixes:
    - Fixed setting name error (copy/paste error)
    - Fixed error with alien science pack subgroups
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 10. 8. 2018
  Changes:
    - Changed tech names for non infused pack researches
    - Changed tech icon for labs (removed the number)
  Fixes:
    - Fixed military research setting from ScienceCostTweaker not working correctly
    - Fixed electromagnetic lab recipe setting from ScienceCostTweaker not working correctly
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 11. 7. 2018
  Fixes:
    - Fixed crafting category wasn't set to crafting-with-fluids
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 21. 6. 2018
  Fixes:
    - Fixed unwanted lab unlock with advanced electronics 3 research
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 21. 6. 2018
  Fixes:
    - Fixed some error occuring with alien research lab
---------------------------------------------------------------------------------------------------
Version: 0.1.0 - Limited test release
Date: 19. 6. 2018
  Major Features:
    - Initial test release