@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.6
 Date: 29. 8. 2018
+  Changes:
+    - Moved brass plate from Uni-lived atom manipulator fluid to Chemical laser Flash Fuel
   Fixes:
     - Fixed logistics science required Universal transport engines instead of Flying cargo kit
     - Fixed when bob inserter overhaul was present it wouldn't remove the fast inserter from the ATMOS set recipe
